--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<a href="./CV/IndexCV.html" target="_blank"> CV 1 </a>
+<a href="./CV/IndexCV.html" target="_blank"> CV </a>
+<a href="./contact/Contact.html" target="_blank"> Contact </a>
 
 </body>
 </html>
