--- a/contact/Contact.html
+++ b/contact/Contact.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<h2 > Julie Bailly</h2>
+<div class="tout">
+
+    <div class="menu">
+
+        <a class="content" href="../index.html" target="_blank">Menu</a>
+        <a class="content" href="../CV/IndexCV.html" target="_blank"> CV </a>
+        <a class="content" href="../Projets/projets.html" target="_blank">Projet </a>
+        <a class="content" href="contact.html" target="_blank"> Contact </a>
+
+    </div>
 <div class="contact">
     <form method="post" action="contact.php" target="_blank" autocomplete="on">
     <h1> Formulaire de contact </h1>
