--- a/index.html
+++ b/index.html
@@ -7,9 +7,44 @@
     <meta name="viewport" content="width: devide-width, initial-scale=1">
 </head>
 <body>
+<h2 > Julie Bailly</h2>
+<div class="tout">
 
-<a href="./CV/IndexCV.html" target="_blank"> CV </a>
-<a href="./contact/Contact.html" target="_blank"> Contact </a>
+    <div class="menu">
+
+        <a class="content" href="index.html" target="_blank">Menu</a>
+        <a class="content" href="./CV/IndexCV.html" target="_blank"> CV </a>
+        <a class="content" href="./Projets/projets.html" target="_blank">Projet </a>
+        <a class="content" href="./contact/Contact.html" target="_blank"> Contact </a>
+
+    </div>
+
+    <div class="page">
+        <br>
+        <div class="image">
+            <br>
+            <img src="pic1.jpg">
+        </div>
+        <div class="text">
+            <h2> Hello, a bit about me...</h2>
+            <p> Bonjour,
+            <br> <br>
+            Je m'appelle Julie Bailly, j'ai 27 ans et depuis peu, j'ai découvers la programmation.
+            Je suis ostéopathe de profession mais j'ai choisis de me réorienter.
+            <br>J'ai plusieurs passions, celle à laquelle j'accorde le plus de temps est l'escalade
+            que je pratique maintenant depuis 8 ans.  </p>
+        </div>
+            <div class="cercle">
+                <a class="rond1" href="index.html">Menu</a>
+                <a class="rond2" href="./CV/Index.html"> CV </a>
+                <a class="rond3" href="./Projet/Projet.html"> Projet </a>
+                <a class="rond4" href="./contact/Contact.html"> Contact </a>
+            </div>
+
+
+
+    </div>
+</div>
 
 </body>
 </html>
