--- a/CV/IndexCV.html
+++ b/CV/IndexCV.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+
+<div class="menu">
+
+    <a class="content" href="../index.html" target="_blank">Menu</a>
+    <a class="content" href="IndexCV.html" target="_blank"> CV </a>
+    <a class="content" href="../Projets/projets.html" target="_blank">Projet </a>
+    <a class="content" href="../contact/contact.html" target="_blank"> Contact </a>
+
+</div>
     <div class="tout">
     <header>
         <h1> Julie Bailly </h1>
