--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <div class="image">
             <br>
-            <img src="pic1.jpg">
+            <img src="pic1.jpg" width="400px" height="auto">
         </div>
         <div class="text">
             <h2> Hello, a bit about me...</h2>
