--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <div class="image">
             <br>
-            <img src="pic1.jpg" width="400px" height="auto">
+            <img src="pic1.jpg" alt="image Julie" width="400px" height="auto">
         </div>
         <div class="text">
             <h2> Hello, a bit about me...</h2>
@@ -36,9 +36,9 @@
         </div>
             <div class="cercle">
                 <a class="rond1" href="index.html">Menu</a>
-                <a class="rond2" href="./CV/Index.html"> CV </a>
-                <a class="rond3" href="./Projet/Projet.html"> Projet </a>
-                <a class="rond4" href="./contact/Contact.html"> Contact </a>
+                <a class="rond2" href="../CV/IndexCV.html"> CV </a>
+                <a class="rond3" href="../Projets/projets.html"> Projet </a>
+                <a class="rond4" href="../contact/Contact.html"> Contact </a>
             </div>
 
 
