--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <a class="content" href="index.html" target="_blank">Menu</a>
         <a class="content" href="./CV/IndexCV.html" target="_blank"> CV </a>
-        <a class="content" href="./Projets/projets.html" target="_blank">Projet </a>
+        <a class="content" href="./Projets/projets.html" target="_blank">Projets </a>
         <a class="content" href="./contact/Contact.html" target="_blank"> Contact </a>
 
     </div>
