--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <div class="menu">
 
-        <a class="content" href="index.html" target="_blank">Menu</a>
-        <a class="content" href="./CV/IndexCV.html" target="_blank"> CV </a>
-        <a class="content" href="./Projets/projets.html" target="_blank">Projets </a>
-        <a class="content" href="./contact/Contact.html" target="_blank"> Contact </a>
+        <a class="content" href="index.html" >Menu</a>
+        <a class="content" href="./CV/IndexCV.html" > CV </a>
+        <a class="content" href="./Projets/projets.html" >Projets </a>
+        <a class="content" href="./contact/Contact.html" > Contact </a>
 
     </div>
 
