--- a/contact/Contact.html
+++ b/contact/Contact.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h2 > Julie Bailly</h2>
+
 <div class="tout">
 
     <div class="menu">
-
+        <h2 > Julie </h2>
         <a class="content" href="../index.html" >Menu</a>
         <a class="content" href="../CV/IndexCV.html" > CV </a>
         <a class="content" href="../Projets/projets.html" >Projet </a>
