--- a/Projets/projets.html
+++ b/Projets/projets.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href=styleprojets.css>
 </head>
 <body>
-<h2 > Julie Bailly</h2>
+
 
     <div class="menu">
-
-        <a class="content" href="../index.html" target="_blank">Menu</a>
-        <a class="content" href="../CV/IndexCV.html" target="_blank"> CV </a>
-        <a class="content" href="projets.html" target="_blank">Projet </a>
-        <a class="content" href="../contact/Contact.html" target="_blank"> Contact </a>
+        <h2 > Julie Bailly</h2>
+        <a class="content" href="../index.html" >Menu</a>
+        <a class="content" href="../CV/IndexCV.html" > CV </a>
+        <a class="content" href="projets.html" >Projet </a>
+        <a class="content" href="../contact/Contact.html" > Contact </a>
 
     </div>
 </body>
