--- a/CV/IndexCV.html
+++ b/CV/IndexCV.html
@@ -14,7 +14,7 @@
     <a class="content" href="../index.html" >Menu</a>
     <a class="content" href="IndexCV.html" > CV </a>
     <a class="content" href="../Projets/projets.html" >Projet </a>
-    <a class="content" href="../contact/contact.html" > Contact </a>
+    <a class="content" href="../contact/Contact.html" > Contact </a>
 
 </div>
     <div class="tout">
