--- a/CV/IndexCV.html
+++ b/CV/IndexCV.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="menu">
-    <h2 > Julie </h2>
+    <h2 > <img class="log" alt="logo" src="../Log.png"> </h2>
     <a class="content" href="../index.html" >Menu</a>
     <a class="content" href="IndexCV.html" > CV </a>
     <a class="content" href="../Projets/projets.html" >Projet </a>
