--- a/Projets/projets.html
+++ b/Projets/projets.html
@@ -9,7 +9,7 @@
 
 
     <div class="menu">
-        <h2 > Julie Bailly</h2>
+        <h2 > <img class="log" alt="logo" src="../Log.png"> </h2>
         <a class="content" href="../index.html" >Menu</a>
         <a class="content" href="../CV/IndexCV.html" > CV </a>
         <a class="content" href="projets.html" >Projet </a>
