--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="tout">
 
     <div class="menu">
-        <h2 > Julie Bailly</h2>
+        <h2 > <img class="log" alt="logo" src="Log.png"></h2>
         <a class="content" href="index.html" >Menu</a>
         <a class="content" href="./CV/IndexCV.html" > CV </a>
         <a class="content" href="./Projets/projets.html" >Projets </a>
@@ -23,7 +23,7 @@
         <br>
         <div class="image">
             <br>
-            <img src="pic1.jpg" alt="image Julie" width="400px" height="auto">
+            <img class="photo" src="pic1.jpg" alt="image Julie" width="400px" height="auto">
         </div>
         <div class="text">
             <h2> Hello, a bit about me...</h2>
