--- a/contact/Contact.html
+++ b/contact/Contact.html
@@ -11,7 +11,7 @@
 <div class="tout">
 
     <div class="menu">
-        <h2 > Julie </h2>
+        <h2 > <img class="log" alt="logo" src="../Log.png"></h2>
         <a class="content" href="../index.html" >Menu</a>
         <a class="content" href="../CV/IndexCV.html" > CV </a>
         <a class="content" href="../Projets/projets.html" >Projet </a>
